message ClientPacket {
	required bytes Packet = 1;
}