message DebugConsoleCommand {
	required string Command = 1;
}
