message DebugMessage {
	required string Message = 1;
}