message GameCancelled {
	required int32 Reason = 1;
}