message GameStarting {
	required int32 GameHandle = 1;
}