message NAckOption {
	required int32 Id = 1;
}