import "PowerHistoryData.proto";

message PowerHistory {
	repeated PowerHistoryData list = 1;
}