message PreCast {
	required int32 Entity = 1;
}