message PreLoad {
	repeated int32 Cards = 1;
}
