import "Entity.proto";
import "Player.proto";

message StartGameState {
	required Entity GameEntity = 1;
	repeated Player Players = 2;
}